--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -32,6 +32,7 @@
 			<input type="hidden" name="allIDCheck" value="" id="allIDCheck" />
 			<input type="hidden" name="fangyuanEntity.fyXqName" value="" id="fyXqName" />
 			<div id="container">
+                <input type="button" name="download" value="下载文件" id="download"/>
 				<div style="width: 100%;height: 50px;text-align: center;line-height: 50px;">
 					<h1>用户展示</h1>
 				</div>
@@ -137,4 +138,8 @@
 		}
 	})
 	})
+
+    $("#download").click(function () {
+        window.location.href="/download/userlist"
+    })
 </script>
