--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -43,7 +43,7 @@
 								<!--<th width="30"><input type="checkbox" id="all" onclick="selectOrClearAllCheckbox(this);" /></th>-->
 								<th>用户编号</th>
 								<th>用户姓名</th>
-								<th>粉丝数</th>
+								<th>粉丝数（万）</th>
 								<th>微博数</th>
 								<th>原创微博数</th>
 								<th>关注数</th>
@@ -55,7 +55,7 @@
 								<!--<td><input type="checkbox" name="IDCheck" value="14458579642011" class="acb" /></td>-->
 								<td>{{r.userid}}</td>
 								<td>{{r.username}}</td>
-								<td>{{r.fansnum}}</td>
+								<td id="fans">{{r.fansnum}}</td>
 								<td>{{r.blognum}}</td>
 								<td>{{r.originalblognum}}</td>
 								<td>{{r.follownum}}</td>
@@ -140,6 +140,7 @@
 	})
 
     $("#download").click(function () {
+        // $.get('http://120.79.19.207:8000/download/userlist');
         window.location.href="/download/userlist"
     })
 </script>
