增加计算bci的功能

--- a/src/main/resources/static/pages/bci.html
+++ b/src/main/resources/static/pages/bci.html
@@ -42,8 +42,8 @@
                     <tr>
                         <th>用户编号</th>
                         <th>用户姓名</th>
-                        <th>微博总数</th>
-                        <th>原创微博数</th>
+                        <th>当日发博数</th>
+                        <th>当日原创微博数</th>
                         <th>当日微博总转发数</th>
                         <th>当日微博总评论数</th>
                         <th>当日微博总点赞数</th>
